[gd_scene load_steps=18 format=3 uid="uid://b605xg1hw7sdr"]

[ext_resource type="Texture2D" uid="uid://cebukflmmmgg3" path="res://images/bird/bird_fill.png" id="1_h7u8n"]
[ext_resource type="Script" path="res://scene/patron.gd" id="1_td06u"]
[ext_resource type="Texture2D" uid="uid://dja0ek61h5nmy" path="res://images/bird/bird_base.png" id="2_vvh5p"]
[ext_resource type="Script" path="res://scene/patron_state/PatronStateMachine.gd" id="2_xjejb"]
[ext_resource type="Script" path="res://scene/patron_state/Idle.gd" id="3_lafxd"]
[ext_resource type="Texture2D" uid="uid://beksen7m2ygr6" path="res://images/bird/bird_eyes.png" id="3_lid3r"]
[ext_resource type="Texture2D" uid="uid://cxlw7fdccyd8i" path="res://images/bird/bird_feet.png" id="4_u1mgq"]
[ext_resource type="Texture2D" uid="uid://c3y248giufovg" path="res://images/bird/bird_feet2.png" id="5_3mvyw"]
[ext_resource type="Script" path="res://scene/patron_state/Read.gd" id="5_v7xu7"]
[ext_resource type="Texture2D" uid="uid://b0o1kdes8am2m" path="res://images/bird/bird_arm.png" id="6_2glyp"]
[ext_resource type="Script" path="res://scene/patron_state/GetItem.gd" id="6_jteks"]
[ext_resource type="Script" path="res://scene/patron_state/Leave.gd" id="6_t68m3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_apiia"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_u1mgq")
}],
"loop": true,
"name": &"stand",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_u1mgq")
}, {
"duration": 1.0,
"texture": ExtResource("5_3mvyw")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rr7n6"]
radius = 2.0
height = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xdbd6"]
radius = 19.0

[sub_resource type="Animation" id="Animation_vxr2p"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/BirdFeet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 2), Vector2(0, -1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i68tf"]
_data = {
"walk": SubResource("Animation_vxr2p")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
platform_floor_layers = 4294967292
platform_wall_layers = 1
script = ExtResource("1_td06u")

[node name="PatronStateMachine" type="Node" parent="."]
script = ExtResource("2_xjejb")

[node name="Idle" type="Node" parent="PatronStateMachine" node_paths=PackedStringArray("body", "nav_agent")]
script = ExtResource("3_lafxd")
body = NodePath("../..")
nav_agent = NodePath("../../NavigationAgent2D")

[node name="IdleTimer" type="Timer" parent="PatronStateMachine/Idle"]
wait_time = 2.0
autostart = true

[node name="Read" type="Node" parent="PatronStateMachine" node_paths=PackedStringArray("nav_agent", "body")]
script = ExtResource("5_v7xu7")
nav_agent = NodePath("../../NavigationAgent2D")
body = NodePath("../..")

[node name="Leave" type="Node" parent="PatronStateMachine" node_paths=PackedStringArray("nav_agent")]
script = ExtResource("6_t68m3")
nav_agent = NodePath("../../NavigationAgent2D")

[node name="GetItem" type="Node" parent="PatronStateMachine" node_paths=PackedStringArray("nav_agent", "patron")]
script = ExtResource("6_jteks")
nav_agent = NodePath("../../NavigationAgent2D")
patron = NodePath("../..")

[node name="Sit" type="Node" parent="PatronStateMachine"]

[node name="Sprite" type="Node2D" parent="."]
position = Vector2(0, 2)

[node name="BirdFill" type="Sprite2D" parent="Sprite"]
position = Vector2(0, -11)
texture = ExtResource("1_h7u8n")

[node name="BirdBase" type="Sprite2D" parent="Sprite"]
position = Vector2(0, -11)
texture = ExtResource("2_vvh5p")

[node name="BirdEyes" type="Sprite2D" parent="Sprite"]
position = Vector2(0, -11)
texture = ExtResource("3_lid3r")

[node name="BirdFeet" type="AnimatedSprite2D" parent="Sprite"]
position = Vector2(0, -11)
sprite_frames = SubResource("SpriteFrames_apiia")
animation = &"walk"

[node name="BirdArm" type="Sprite2D" parent="Sprite"]
position = Vector2(0, -11)
texture = ExtResource("6_2glyp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_rr7n6")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_xdbd6")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
navigation_layers = 5
path_postprocessing = 1
radius = 30.0
avoidance_layers = 2
debug_enabled = true
debug_path_custom_point_size = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i68tf")
}

[connection signal="timeout" from="PatronStateMachine/Idle/IdleTimer" to="PatronStateMachine/Idle" method="pick_new_state"]
[connection signal="target_reached" from="NavigationAgent2D" to="PatronStateMachine" method="_on_navigation_agent_2d_target_reached"]
[connection signal="target_reached" from="NavigationAgent2D" to="PatronStateMachine/GetItem" method="_on_navigation_agent_2d_target_reached"]
